--- a/src/components/LoadingScreen.css
+++ b/src/components/LoadingScreen.css
@@ -20,18 +20,28 @@
   width: 100%;
   max-width: 90vw;
   height: 150px;
+  overflow: hidden;
 }
 
 .logo-container {
   position: absolute;
+  top: 50%;
   left: 50%;
-  transform: translateX(-50%) scale(1.5);
-  transition: transform 1.5s ease-in-out;
+  transform: translate(-50%, -50%) scale(0);
+  transition: transform 1s ease-in-out;
   z-index: 3;
 }
 
-.logo-container.slide-left {
-  transform: translateX(-180px) scale(1.5);
+.logo-container.scale {
+  transform: translate(-50%, -50%) scale(1.5);
+}
+
+.logo-container.right {
+  transform: translate(calc(40vw - 50%), -50%) scale(1.5);
+}
+
+.logo-container.left {
+  transform: translate(-180px, -50%) scale(1.5);
 }
 
 .logo-image {
@@ -46,13 +56,18 @@
   color: #172b4d;
   font-size: 2.4rem;
   opacity: 0;
+  z-index: 2;
+  position: relative;
   overflow: hidden;
-  z-index: 1;
-  transition: opacity 0s ease-in 1.5s;
+  mask-image: linear-gradient(to right, transparent 0%, black 40%);
+  -webkit-mask-image: linear-gradient(to right, transparent 0%, black 40%);
+  transition: opacity 0.5s ease-in;
 }
 
 .text-container.reveal {
   opacity: 1;
+  mask-image: none;
+  -webkit-mask-image: none;
 }
 
 .divider {
